--- a/documentation/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/documentation/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -26,5 +26,9 @@
   "sidebar.tutorialSidebar.category.Examples": {
     "message": "Examples",
     "description": "The label for category Examples in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.Migrations": {
+    "message": "Migrations",
+    "description": "The label for category Migrations in sidebar tutorialSidebar"
   }
 }
