--- a/documentation/i18n/fr/docusaurus-plugin-content-docs/current.json
+++ b/documentation/i18n/fr/docusaurus-plugin-content-docs/current.json
@@ -26,5 +26,9 @@
   "sidebar.tutorialSidebar.category.Outputs": {
     "message": "Outputs",
     "description": "The label for category Outputs in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.Migrations": {
+    "message": "Migrations",
+    "description": "The label for category Migrations in sidebar tutorialSidebar"
   }
 }
