--- a/documentation/docs/04-all-outputs.mdx
+++ b/documentation/docs/04-all-outputs.mdx
@@ -21,7 +21,9 @@ The list of all the outputs.
 | [already-stale-issues-count](issues/outputs/already-stale-issues-count-output)                                    | The number of issues processed which were already stale.                           | `number` |
 | [remove-stale-issues-count](issues/outputs/remove-stale-issues-count-output)                                      | The number of issues from where the stale state was removed.                       | `number` |
 | [close-issues-count](issues/outputs/close-issues-count-output)                                                    | The number of issues closed.                                                       | `number` |
+| [issues-comments-count](issues/outputs/issues-comments-count-output)                                              | The number of issues labels mutated (added or removed).                            | `number` |
 | [added-issues-comments-count](issues/outputs/added-issues-comments-count-output)                                  | The number of added issues comments.                                               | `number` |
+| [removed-issues-comments-count](issues/outputs/removed-issues-comments-count-output)                              | The number of removed issues comments.                                             | `number` |
 | [added-issues-labels-count](issues/outputs/added-issues-labels-count-output)                                      | The number of added issues labels.                                                 | `number` |
 | [called-api-issues-count](issues/outputs/called-api-issues-count-output)                                          | The number of GitHub API calls performed for the issues.                           | `number` |
 | [called-api-issues-queries-count](issues/outputs/called-api-issues-queries-count-output)                          | The number of GitHub API queries calls performed for the issues.                   | `number` |
